Alterando pagina treino

--- a/pages/alunos/alunos.html
+++ b/pages/alunos/alunos.html
@@ -35,7 +35,6 @@
                     <li><a href="#" class="orange-text">Alunos</a></li>
                     <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
                     <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
-                    <li><a href="../treino/treino.html" class="black-text">Treino</a></li>
                 </ul>
             </div>
         </nav>
@@ -47,7 +46,6 @@
         <li><a href="#" class="orange-text">Alunos</a></li>
         <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
         <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
-        <li><a href="../treino/treino.html" class="black-text">Treino</a></li>
     </ul>
 
 
@@ -117,33 +115,35 @@
     <!-- Lista dos alunos -->
     <div class="container " id="alunosAtivos">
         <div>
-            <div class="row">
-                <div class="col s12 m3 l3 center-align">
-                    <img class="responsive-img " src="../../img/avatar.png" alt="avatar do usuario">
-                </div>
+            <a href="../treino/treino.html">
+                <div class="row">
+                    <div class="col s12 m3 l3 center-align">
+                        <img class="responsive-img " src="../../img/avatar.png" alt="avatar do usuario">
+                    </div>
 
-                <div class="col s12 m3 l3 center-align">
-                    <p>José</p>
-                </div>
+                    <div class="col s12 m3 l3 center-align">
+                        <p>José</p>
+                    </div>
 
-                <div class="col s12 m3 l3 center-align">
-                    <p>0800545145</p>
-                </div>
+                    <div class="col s12 m3 l3 center-align">
+                        <p>0800545145</p>
+                    </div>
 
-                <div class="col s12 m3 l3 center-align">
-                    <form action="#">
-                        <p>
-                            <label>
+                    <div class="col s12 m3 l3 center-align">
+                        <form action="#">
+                            <p>
+                                <label>
                                 <input type="checkbox" />
                                 <span class="black-text">Presente</span>
                             </label>
-                        </p>
-                    </form>
+                            </p>
+                        </form>
+                    </div>
+                    <div class="col l12 m12 s12 center-align">
+                        <button>REMOVER ALUNO</button>
+                    </div>
                 </div>
-                <div class="col l12 m12 s12 center-align">
-                    <button>REMOVER ALUNO</button>
-                </div>
-            </div>
+            </a>
         </div>
     </div>
 
