--- a/pages/sobre/sobre.html
+++ b/pages/sobre/sobre.html
@@ -138,11 +138,11 @@
                             </a>
                             <span class="card-title activator grey-text text-darken-4">Diogo</span>
                             <p>
-                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                                <i class="material-icons">perm_identity</i>Desenvolvedor</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank" rel="noopener">GitHub: Dogix11</a></p>
                             <p>
-                                <i class="material-icons">email</i> yourmail@domain.com</p>
+                                <i class="material-icons">email</i> diogofcar@gmail.com</p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Diogo
@@ -150,11 +150,11 @@
                             </span>
                             <p>Mais informações.</p>
                             <p>
-                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                                <i class="material-icons">perm_identity</i>Desenvolvedor</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank" rel="noopener">GitHub: Dogix11</a></p>
                             <p>
-                                <i class="material-icons">email</i> yourmail@domain.com
+                                <i class="material-icons">email</i> diogofcar@gmail.com
                             </p>
                             <p>
                             </p>
@@ -179,11 +179,11 @@
                             </a>
                             <span class="card-title activator grey-text text-darken-4">Paulo Ernesto</span>
                             <p>
-                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                                <i class="material-icons">perm_identity</i>Desenvolvedor</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank" rel="noopener">GitHub: pauloernestom</a></p>
                             <p>
-                                <i class="material-icons">email</i> yourmail@domain.com</p>
+                                <i class="material-icons">email</i>pauloernestom@gmail.com</p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Paulo Ernesto
@@ -191,11 +191,11 @@
                             </span>
                             <p>Mais informações.</p>
                             <p>
-                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                                <i class="material-icons">perm_identity</i>Desenvolvedor</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank" rel="noopener">GitHub: pauloernestom</a></p>
                             <p>
-                                <i class="material-icons">email</i> yourmail@domain.com
+                                <i class="material-icons">email</i> pauloernestom@gmail.com
                             </p>
                             <p>
                             </p>
@@ -220,9 +220,9 @@
                             </a>
                             <span class="card-title activator grey-text text-darken-4">Rafael Santana</span>
                             <p>
-                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                                <i class="material-icons">perm_identity</i>Desenvolvedor</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub: rafalmeida73</a></p>
                             <p>
                                 <i class="material-icons">email</i> rafaelsantana7213@gmail.com</p>
                         </div>
@@ -232,9 +232,9 @@
                             </span>
                             <p>Mais informações.</p>
                             <p>
-                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                                <i class="material-icons">perm_identity</i>Desenvolvedor</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub: rafalmeida73</a></p>
                             <p>
                                 <i class="material-icons">email</i> rafaelsantana7213@gmail.com
                             </p>
@@ -263,7 +263,7 @@
                             <p>
                                 <i class="material-icons">perm_identity</i>Scrum Master</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub: ronycleber</a></p>
                             <p>
                                 <i class="material-icons">email</i> ronycleber_pm@hotmail.com</p>
                         </div>
@@ -275,7 +275,7 @@
                             <p>
                                 <i class="material-icons">perm_identity</i>Scrum Master</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub: ronycleber</a></p>
                             <p>
                                 <i class="material-icons">email</i> ronycleber_pm@hotmail.com</p>
                             <p>
