--- a/pages/treino/treino.html
+++ b/pages/treino/treino.html
@@ -52,256 +52,68 @@
     </ul>
 
     <div class="container">
-        <!-- PESQUISA -->
-        <div class="nav-wrapper">
-            <form>
-                <div class="input-field">
-                    <input id="search" type="search" required placeholder="Pesquisar">
-                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                    <i class="material-icons">close</i>
+        <div id="perfil">
+            <div class="row">
+                <div class="col s12 m6 l3">
+                    <img src="../../img/avatar.png" alt="">
                 </div>
-            </form>
+
+                <div class="col s12 m6 l9 left-align">
+                    <h4>João</h4>
+                    <P>São Paulo, SP</P>
+                </div>
+            </div>
+
+            <div class="col s12 m12 l12">
+                <ul class="collapsible">
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">add</i>Mais informações</div>
+                        <div class="collapsible-body">
+                            <p>Telefone: 11 89564534</p>
+                            <p>Id Strava: 45454</p>
+                            <P>Cidade: São Paulo</P>
+                            <p>Estado: SP</p>
+                            <P>Sexo: Masculino</P>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
-
-
-        <!-- ALUNOS -->
-        <ul class="collection">
-            <li class="collection-item avatar">
-                <img src="../../img/avatar.png" alt="" class="circle">
-                <span class="title">João</span>
-                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
-                </p>
-                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
-                <div id="modal1" class="modal">
-                    <div class="modal-content">
-                        <br>
-                        <h4>João</h4>
-                        <p>Sobrenome: Silva</p>
-                        <p>Telefone: 11 89564534</p>
-                        <p>Id Strava: 45454</p>
-                        <P>Cidade: São Paulo</P>
-                        <p>Estado: SP</p>
-                        <P>Sexo: Masculino</P>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
-                    </div>
-                </div>
-            </li>
-            <li class="collection-item avatar">
-                <img src="../../img/avatar.png" alt="" class="circle">
-                <span class="title">João</span>
-                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
-                </p>
-                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
-                <div id="modal1" class="modal">
-                    <div class="modal-content">
-                        <br>
-                        <h4>João</h4>
-                        <p>Sobrenome: Silva</p>
-                        <p>Telefone: 11 89564534</p>
-                        <p>Id Strava: 45454</p>
-                        <P>Cidade: São Paulo</P>
-                        <p>Estado: SP</p>
-                        <P>Sexo: Masculino</P>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
-                    </div>
-                </div>
-            </li>
-            <li class="collection-item avatar">
-                <img src="../../img/avatar.png" alt="" class="circle">
-                <span class="title">João</span>
-                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
-                </p>
-                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
-                <div id="modal1" class="modal">
-                    <div class="modal-content">
-                        <br>
-                        <h4>João</h4>
-                        <p>Sobrenome: Silva</p>
-                        <p>Telefone: 11 89564534</p>
-                        <p>Id Strava: 45454</p>
-                        <P>Cidade: São Paulo</P>
-                        <p>Estado: SP</p>
-                        <P>Sexo: Masculino</P>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
-                    </div>
-                </div>
-            </li>
-            <li class="collection-item avatar">
-                <img src="../../img/avatar.png" alt="" class="circle">
-                <span class="title">João</span>
-                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
-                </p>
-                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
-                <div id="modal1" class="modal">
-                    <div class="modal-content">
-                        <br>
-                        <h4>João</h4>
-                        <p>Sobrenome: Silva</p>
-                        <p>Telefone: 11 89564534</p>
-                        <p>Id Strava: 45454</p>
-                        <P>Cidade: São Paulo</P>
-                        <p>Estado: SP</p>
-                        <P>Sexo: Masculino</P>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
-                    </div>
-                </div>
-            </li>
-            <li class="collection-item avatar">
-                <img src="../../img/avatar.png" alt="" class="circle">
-                <span class="title">João</span>
-                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
-                </p>
-                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
-                <div id="modal1" class="modal">
-                    <div class="modal-content">
-                        <br>
-                        <h4>João</h4>
-                        <p>Sobrenome: Silva</p>
-                        <p>Telefone: 11 89564534</p>
-                        <p>Id Strava: 45454</p>
-                        <P>Cidade: São Paulo</P>
-                        <p>Estado: SP</p>
-                        <P>Sexo: Masculino</P>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
-                    </div>
-                </div>
-            </li>
-            <li class="collection-item avatar">
-                <img src="../../img/avatar.png" alt="" class="circle">
-                <span class="title">João</span>
-                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
-                </p>
-                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
-                <div id="modal1" class="modal">
-                    <div class="modal-content">
-                        <br>
-                        <h4>João</h4>
-                        <p>Sobrenome: Silva</p>
-                        <p>Telefone: 11 89564534</p>
-                        <p>Id Strava: 45454</p>
-                        <P>Cidade: São Paulo</P>
-                        <p>Estado: SP</p>
-                        <P>Sexo: Masculino</P>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
-                    </div>
-                </div>
-            </li>
-            <li class="collection-item avatar">
-                <img src="../../img/avatar.png" alt="" class="circle">
-                <span class="title">João</span>
-                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
-                </p>
-                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
-                <div id="modal1" class="modal">
-                    <div class="modal-content">
-                        <br>
-                        <h4>João</h4>
-                        <p>Sobrenome: Silva</p>
-                        <p>Telefone: 11 89564534</p>
-                        <p>Id Strava: 45454</p>
-                        <P>Cidade: São Paulo</P>
-                        <p>Estado: SP</p>
-                        <P>Sexo: Masculino</P>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
-                    </div>
-                </div>
-            </li>
-            <li class="collection-item avatar">
-                <img src="../../img/avatar.png" alt="" class="circle">
-                <span class="title">João</span>
-                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
-                </p>
-                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
-                <div id="modal1" class="modal">
-                    <div class="modal-content">
-                        <br>
-                        <h4>João</h4>
-                        <p>Sobrenome: Silva</p>
-                        <p>Telefone: 11 89564534</p>
-                        <p>Id Strava: 45454</p>
-                        <P>Cidade: São Paulo</P>
-                        <p>Estado: SP</p>
-                        <P>Sexo: Masculino</P>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
-                    </div>
-                </div>
-            </li>
-            <li class="collection-item avatar">
-                <img src="../../img/avatar.png" alt="" class="circle">
-                <span class="title">João</span>
-                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
-                </p>
-                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
-                <div id="modal1" class="modal">
-                    <div class="modal-content">
-                        <br>
-                        <h4>João</h4>
-                        <p>Sobrenome: Silva</p>
-                        <p>Telefone: 11 89564534</p>
-                        <p>Id Strava: 45454</p>
-                        <P>Cidade: São Paulo</P>
-                        <p>Estado: SP</p>
-                        <P>Sexo: Masculino</P>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
-                    </div>
-                </div>
-            </li>
-            <li class="collection-item avatar">
-                <img src="../../img/avatar.png" alt="" class="circle">
-                <span class="title">João</span>
-                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
-                </p>
-                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
-                <div id="modal1" class="modal">
-                    <div class="modal-content">
-                        <br>
-                        <h4>João</h4>
-                        <p>Sobrenome: Silva</p>
-                        <p>Telefone: 11 89564534</p>
-                        <p>Id Strava: 45454</p>
-                        <P>Cidade: São Paulo</P>
-                        <p>Estado: SP</p>
-                        <P>Sexo: Masculino</P>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
-                    </div>
-                </div>
-            </li>
-
-        </ul>
     </div>
 
-    <!-- PAGINACAO -->
-    <div id="pages">
-        <ul class="pagination center-align">
-            <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-            <li class="active black"><a href="#!">1</a></li>
-            <li class="waves-effect"><a href="#!">2</a></li>
-            <li class="waves-effect"><a href="#!">3</a></li>
-            <li class="waves-effect"><a href="#!">4</a></li>
-            <li class="waves-effect"><a href="#!">5</a></li>
-            <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
-        </ul>
+    <div class="container">
+        <div id="atividades">
+            <div class="col s12 m12 l12 center-align" id="titulo">
+                <h3>ATIVIDADES</h3>
+            </div>
+
+            <div class="col s12 m12 l6 left-align" id="subtitulo">
+                <p>Esta semana</p>
+            </div>
+            <div class="col s12 m12 l6">
+                <canvas id="myChart"></canvas>
+            </div>
+
+            <div class="center-align" id="meta">
+                <div class="row">
+                    <div class="col s12 m6 l6">
+                        <h4>Meta: 38km </h4>
+                    </div>
+                    <div class="col s12 m6 l6">
+                        <h4>Meta restante: 10%</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+
+
+
+
+
+
 
 
 
@@ -341,12 +153,14 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script src="../../js/main.js"></script>
     <script src="../../js/topo.js"></script>
     <script src="../../js/loader.js"></script>
+    <script src="../../js/treino.js"></script>
     <script>
         $(document).ready(function() {
-            $('.modal').modal();
+            $('.collapsible').collapsible();
         });
     </script>
 </body>
