Alterando para mobile

--- a/pages/sobre/sobre.html
+++ b/pages/sobre/sobre.html
@@ -142,7 +142,7 @@
                             <p>
                                 <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank" rel="noopener">GitHub: Dogix11</a></p>
                             <p>
-                                <i class="material-icons">email</i> diogofcar@gmail.com</p>
+                                <i class="material-icons">email</i> <a href="mailto:diogofcar@gmail.com?Subject=Contato%20High%20Performance" class="black-text">diogofcar@gmail.com</a> </p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Diogo
@@ -154,7 +154,7 @@
                             <p>
                                 <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank" rel="noopener">GitHub: Dogix11</a></p>
                             <p>
-                                <i class="material-icons">email</i> diogofcar@gmail.com
+                                <i class="material-icons">email</i><a href="mailto:diogofcar@gmail.com?Subject=Contato%20High%20Performance" class="black-text">diogofcar@gmail.com</a>
                             </p>
                             <p>
                             </p>
@@ -183,7 +183,7 @@
                             <p>
                                 <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank" rel="noopener">GitHub: pauloernestom</a></p>
                             <p>
-                                <i class="material-icons">email</i>pauloernestom@gmail.com</p>
+                                <i class="material-icons">email</i><a href="mailto:pauloernestom@gmail.com?Subject=Contato%20High%20Performance" class="black-text">pauloernestom@gmail.com</p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Paulo Ernesto
@@ -195,7 +195,7 @@
                             <p>
                                 <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank" rel="noopener">GitHub: pauloernestom</a></p>
                             <p>
-                                <i class="material-icons">email</i> pauloernestom@gmail.com
+                                <i class="material-icons">email</i> <a href="mailto:pauloernestom@gmail.com?Subject=Contato%20High%20Performance" class="black-text">pauloernestom@gmail.com</a>
                             </p>
                             <p>
                             </p>
@@ -224,7 +224,8 @@
                             <p>
                                 <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub: rafalmeida73</a></p>
                             <p>
-                                <i class="material-icons">email</i> rafaelsantana7213@gmail.com</p>
+                                <i class="material-icons">email</i> <a href="mailto:rafaelsantana7213@gmail.com?Subject=Contato%20High%20Performance" class="black-text">rafaelsantana7213@gmail.com</a>
+                            </p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Rafael Santana
@@ -236,7 +237,7 @@
                             <p>
                                 <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub: rafalmeida73</a></p>
                             <p>
-                                <i class="material-icons">email</i> rafaelsantana7213@gmail.com
+                                <i class="material-icons">email</i> <a href="mailto:rafaelsantana7213@gmail.com?Subject=Contato%20High%20Performance" class="black-text">rafaelsantana7213@gmail.com</a>
                             </p>
                             <p>
                             </p>
@@ -263,9 +264,11 @@
                             <p>
                                 <i class="material-icons">perm_identity</i>Scrum Master</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub: ronycleber</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub: ronycleber</a>
+                            </p>
                             <p>
-                                <i class="material-icons">email</i> ronycleber_pm@hotmail.com</p>
+                                <i class="material-icons">email</i> <a href="mailto:ronycleber_pm@hotmail.com?Subject=Contato%20High%20Performance" class="black-text">ronycleber_pm@hotmail.com</a>
+                            </p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Rony Cleber
@@ -277,7 +280,7 @@
                             <p>
                                 <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub: ronycleber</a></p>
                             <p>
-                                <i class="material-icons">email</i> ronycleber_pm@hotmail.com</p>
+                                <i class="material-icons">email</i> <a href="mailto:ronycleber_pm@hotmail.com?Subject=Contato%20High%20Performance" class="black-text">ronycleber_pm@hotmail.com</a></p>
                             <p>
                             </p>
                             <p>
@@ -318,7 +321,7 @@
                                 <div class="input-field col s12">
                                     <i class="material-icons prefix">email</i>
                                     <input id="email" type="email" class="validate">
-                                    <label for="email">Email</label>
+                                    <label for="email">E-mail</label>
                                 </div>
                             </div>
                             <div class="row">
@@ -331,7 +334,7 @@
                                 <div class="input-field col s12">
                                     <i class="material-icons prefix">question_answer</i>
                                     <textarea id="message" class="materialize-textarea validate" length="120"></textarea>
-                                    <label for="message">Menssagem</label>
+                                    <label for="message">Mensagem</label>
                                 </div>
                                 <div class="row">
                                     <div class="input-field col s12">
@@ -389,7 +392,6 @@
     <script src="../../js/main.js"></script>
     <script src="../../js/topo.js"></script>
     <script src="../../js/loader.js"></script>
-    <script src="../../js/materialbox.js"></script>
 </body>
 
 </html>
