--- a/pages/treino/treino.html
+++ b/pages/treino/treino.html
@@ -33,10 +33,9 @@
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
                     <li><a href="../../index.html" class="black-text">Home</a></li>
-                    <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
+                    <li><a href="../alunos/alunos.html" class="orange-text">Alunos</a></li>
                     <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
                     <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
-                    <li><a href="#" class="orange-text">Treino</a></li>
                 </ul>
             </div>
         </nav>
@@ -45,10 +44,9 @@
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="../../index.html" class="black-text">Home</a></li>
-        <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
+        <li><a href="../alunos/alunos.html" class="orange-text">Alunos</a></li>
         <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
         <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
-        <li><a href="#" class="orange-text">Treino</a></li>
     </ul>
 
     <div class="container">
@@ -134,7 +132,6 @@
                         <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
                         <li><a class="white-text text-lighten-3" href="../crie/crie.html">Crie</a></li>
                         <li><a class="white-text text-lighten-3" href="../financas/financas.html">Finanças</a></li>
-                        <li><a class="white-text text-lighten-3" href="#">Treino</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
