--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="square center-align">
                 <h6>COMECE <span>AGORA</span> A USAR<br> O <span>HIGH PERFORMANCE</span></h6>
             </div>
-            <a href="./pages/cadastro/cadastro.html">Cadastre-se</a>
+            <a href="./pages/cadastro/cadastro.html">Registre-se</a>
         </div>
 
         <div class="col s12 m12 l7 left-align">
