--- a/pages/cadastroAluno/cadastrarAlunos.html
+++ b/pages/cadastroAluno/cadastrarAlunos.html
@@ -42,12 +42,12 @@
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">call</i>
-                        <input type="text" class="form-control" onkeypress="$(this).mask('(00) 0000-00009')">
+                        <input type="text" class="form-control" onkeypress="$(this).mask('(00) 00000-0009')">
                         <label for="cel">Celular</label>
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">date_range</i>
-                        <input type="text" class="form-control" onkeypress="$(this).mask('00/00/0000')">
+                        <input type="date" class="form-control">
                         <label for="password">Data Nasc.</label>
                     </div>
                     <div class="input-field">
