--- a/pages/crie/crie.html
+++ b/pages/crie/crie.html
@@ -31,10 +31,10 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="../../index.html" class="black-text">Home</a></li>
                     <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
                     <li><a href="#" class="orange-text">Crie</a></li>
                     <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
+                    <li><a href="../../index.html" class="black-text">Sair</a></li>
                 </ul>
             </div>
         </nav>
@@ -42,10 +42,10 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="../../index.html" class="black-text">Home</a></li>
         <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
         <li><a href="#" class="orange-text">Crie</a></li>
         <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
+        <li><a href="../../index.html" class="black-text">Sair</a></li>
     </ul>
 
     <!-- Adicionar aluno -->
@@ -454,10 +454,10 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="../../index.html">Home</a></li>
                         <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
                         <li><a class="white-text text-lighten-3" href="">Crie</a></li>
                         <li><a class="white-text text-lighten-3" href="../financas/financas.html">Finanças</a></li>
+                        <li><a class="white-text text-lighten-3" href="../../index.html">Sair</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
