--- a/pages/sobre/sobre.html
+++ b/pages/sobre/sobre.html
@@ -324,31 +324,39 @@
                                     <label for="email">E-mail</label>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <i class="material-icons prefix">archive</i>
-                                    <input id="cv" type="file" class="validate">
-                                </div>
-                            </div>
+
                             <div class="row">
                                 <div class="input-field col s12">
                                     <i class="material-icons prefix">question_answer</i>
                                     <textarea id="message" class="materialize-textarea validate" length="120"></textarea>
                                     <label for="message">Mensagem</label>
                                 </div>
-                                <div class="row">
-                                    <div class="input-field col s12">
-                                        <button class="btn waves-effect waves-light right orange" type="submit" name="action">Enviar
-                                            <i class="material-icons right">send</i>
-                                        </button>
+                            </div>
+                            <div class="row">
+                                <div class="file-field input-field">
+                                    <div class="btn" id="btnCv">
+                                        <span>File</span>
+                                        <input type="file">
+                                    </div>
+                                    <div class="file-path-wrapper">
+                                        <input class="file-path validate" type="text" placeholder="Arquivo em pdf, doc, entre outros.">
                                     </div>
                                 </div>
                             </div>
-                        </form>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <button class="btn waves-effect waves-light right orange" type="submit" name="action">Enviar
+                                            <i class="material-icons right">send</i>
+                                        </button>
+                                </div>
+                            </div>
                     </div>
+
+                    </form>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     </div>
 
