--- a/pages/treino/treino.html
+++ b/pages/treino/treino.html
@@ -32,10 +32,10 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="../../index.html" class="black-text">Home</a></li>
                     <li><a href="../alunos/alunos.html" class="orange-text">Alunos</a></li>
                     <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
                     <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
+                    <li><a href="../../index.html" class="black-text">Sair</a></li>
                 </ul>
             </div>
         </nav>
@@ -72,6 +72,8 @@
                             <P>Cidade: São Paulo</P>
                             <p>Estado: SP</p>
                             <P>Sexo: Masculino</P>
+                            <p><i class="material-icons">create</i>Editar dados</p>
+                            <p><i class="material-icons">delete</i>Remover aluno</p>
                         </div>
                     </li>
                 </ul>
