--- a/pages/sobre/sobre.html
+++ b/pages/sobre/sobre.html
@@ -335,7 +335,7 @@
                             <div class="row">
                                 <div class="file-field input-field">
                                     <div class="btn" id="btnCv">
-                                        <span>File</span>
+                                        <span>Currículo</span>
                                         <input type="file">
                                     </div>
                                     <div class="file-path-wrapper">
