--- a/pages/alunos/alunos.html
+++ b/pages/alunos/alunos.html
@@ -54,7 +54,7 @@
         <div class="quadrado">
             <div class="row square" id="alunos">
                 <div class="col s12 m12 l6 ">
-                    <h2>1 Alunos ativos</h2>
+                    <h2>2 Alunos ativos</h2>
                 </div>
                 <div class="col s12 m12 l6 ">
                     <img class="responsive-img" src="../../img/user.png" alt="Alunos ativos">
@@ -87,39 +87,32 @@
     <!-- Lista dos alunos -->
     <div class="container">
         <div class="col s12 m12 l12">
-            <table class="responsive-table highlight centered" id="exportar">
+            <table class="responsive-table highlight centered table" id="tabledata">
                 <thead>
                     <tr>
+                        <th>Id</th>
                         <th id="description">Imagem</th>
                         <th>Nome</th>
                         <th>Telefone</th>
-                        <th>Presença</th>
+                        <th>Meta</th>
                     </tr>
                 </thead>
 
                 <tbody>
                     <tr data-url="../treino/treino.html">
-                        <td><img src="../../img/avatar.png" alt=""></td>
+                        <td>1</td>
+                        <td><img src="../../img/avatar.png" alt="Foto José"></td>
                         <td>José</td>
                         <td>0800545145</td>
-                        <td>
-                            <label>
-                                 <input type="checkbox" />
-                                <span class="black-text">Presente</span>
-                        </label>
-                        </td>
+                        <td>32 km</td>
                     </tr>
 
                     <tr data-url="../treino/treino.html">
-                        <td><img src="../../img/avatar.png" alt=""></td>
+                        <td>1</td>
+                        <td><img src="../../img/avatar.png" alt="Foto José"></td>
                         <td>José</td>
                         <td>0800545145</td>
-                        <td>
-                            <label>
-                                 <input type="checkbox" />
-                                <span class="black-text">Presente</span>
-                        </label>
-                        </td>
+                        <td>32 km</td>
                     </tr>
                 </tbody>
             </table>
@@ -131,10 +124,10 @@
             <div class="col l12 m12 s12 center-align">
                 <ul id="dropdown2" class="dropdown-content">
                     <li>
-                        <a href="#!" id="pdf" class="black-text">PDF</a>
+                        <a onclick="dowloadDoc()" id="pdf" class="black-text">PDF</a>
                     </li>
                     <li>
-                        <a href="#!" id="csv" class="black-text">CSV</a>
+                        <a href="#!" id="csv" class="black-text">Excel</a>
                     </li>
                 </ul>
                 <a class="btn dropdown-trigger" href="#!" data-target="dropdown2" id="btnExport">Exportar para<i class="material-icons right" >arrow_drop_down</i></a>
@@ -180,11 +173,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../../js/main.js"></script>
     <script src="../../js/topo.js"></script>
+
+    <!-- PDF -->
+    <script src="https://cdn.jsdelivr.net/npm/pdfmake@0.1.65/build/pdfmake.min.js"></script>
     <script src="../../js/loader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jspdf@1.5.3/dist/jspdf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.4.4/dist/jspdf.plugin.autotable.min.js"></script>
-    <script src="../../js/tableHTMLExport.js"></script>
+    <script src="../../js/html2canvas.min.js"></script>
     <script src="../../js/exportar.js"></script>
+
+    <!-- EXCEL -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery-table2excel@1.1.1/dist/jquery.table2excel.min.js"></script>
 </body>
 
 </html>
