--- a/pages/treino/treino.html
+++ b/pages/treino/treino.html
@@ -161,6 +161,9 @@
         $(document).ready(function() {
             $('.collapsible').collapsible();
         });
+        $(document).ready(function() {
+            $('select').formSelect();
+        });
     </script>
 </body>
 
