--- a/pages/alunos/alunos.html
+++ b/pages/alunos/alunos.html
@@ -87,11 +87,11 @@
     <!-- Lista dos alunos -->
     <div class="container">
         <div class="col s12 m12 l12">
-            <table class="responsive-table highlight centered table" id="tabledata">
+            <table class="highlight centered table" id="tabledata">
                 <thead>
                     <tr>
                         <th>Id</th>
-                        <th id="description">Imagem</th>
+                        <th>Imagem</th>
                         <th>Nome</th>
                         <th>Telefone</th>
                         <th>Meta</th>
