Implementado pagina de edicao de dados

--- a/pages/treino/treino.html
+++ b/pages/treino/treino.html
@@ -67,13 +67,17 @@
                     <li>
                         <div class="collapsible-header"><i class="material-icons">add</i>Mais informações</div>
                         <div class="collapsible-body">
-                            <p>Telefone: 11 89564534</p>
+                            <p>E-mail: joao@gmail.com</p>
+                            <p>Celular: 11 89564534</p>
                             <p>Id Strava: 45454</p>
                             <P>Cidade: São Paulo</P>
                             <p>Estado: SP</p>
                             <P>Sexo: Masculino</P>
-                            <p><i class="material-icons">create</i>Editar dados</p>
-                            <p><i class="material-icons">delete</i>Remover aluno</p>
+                            <p>Data Nasc: 29/03/1997</p>
+                            <p>
+                                <a href="../EditarAluno/editarAluno.html" class="black-text"><i class="material-icons">create</i>Editar dados</a>
+                            </p>
+                            <p><a href="#" class="black-text"><i class="material-icons">delete</i>Remover aluno</a></p>
                         </div>
                     </li>
                 </ul>
