--- a/pages/crie/crie.html
+++ b/pages/crie/crie.html
@@ -48,22 +48,17 @@
         <li><a href="../../index.html" class="black-text">Sair</a></li>
     </ul>
 
-    <!-- Adicionar aluno -->
-    <div class="container " id="alunosAtivos">
-        <div class="col s12 m4 l12 center-align">
-            <button>Adicionar aluno</button>
-        </div>
-    </div>
     <!-- Lista dos alunos -->
     <div id="aulas">
-        <div class="container">
-            <ul class="collapsible">
-                <li>
-                    <div class="collapsible-header">
-                        <i class="material-icons">assignment_ind</i> 19/04/2020
-                        <span class="new badge orange" data-badge-caption="aulas">2</span>
-                    </div>
-                    <div class="collapsible-body"><span>
+        <div class="aulasContainer">
+            <div class="container">
+                <ul class="collapsible">
+                    <li>
+                        <div class="collapsible-header">
+                            <i class="material-icons">assignment_ind</i> 19/04/2020
+                            <span class="new badge orange" data-badge-caption="aulas">2</span>
+                        </div>
+                        <div class="collapsible-body"><span>
                             <div class="col s12 m12 l12">
                                 <table class="highlight centered table responsive-table" id="tabledata">
                                     <thead>
@@ -101,20 +96,70 @@
                                 </table>
                             </div>
                         </span>
-                    </div>
-                </li>
-            </ul>
-        </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
 
-        <!-- Lista dos alunos -->
-        <div class="container">
-            <ul class="collapsible">
-                <li>
-                    <div class="collapsible-header">
-                        <i class="material-icons">assignment_ind</i> 19/04/2020
-                        <span class="new badge orange" data-badge-caption="aulas">2</span>
-                    </div>
-                    <div class="collapsible-body"><span>
+            <div class="container">
+                <ul class="collapsible">
+                    <li>
+                        <div class="collapsible-header">
+                            <i class="material-icons">assignment_ind</i> 19/04/2020
+                            <span class="new badge orange" data-badge-caption="aulas">2</span>
+                        </div>
+                        <div class="collapsible-body"><span>
+                            <div class="col s12 m12 l12">
+                                <table class="highlight centered table responsive-table" id="tabledata">
+                                    <thead>
+                                        <tr>
+                                            <th id="marginTh">Imagem</th>
+                                            <th>Nome</th>
+                                            <th>Aula</th>
+                                            <th>Horario</th>
+                                            <th>Contato</th>
+                                            <th>Remover</th>
+                                        </tr>
+                                    </thead>
+
+                                    <tbody>
+                                        <tr data-url="../treino/treino.html">
+                                            <td><img src="../../img/avatar.png" alt="Foto José"></td>
+                                            <td>José</td>
+                                            <td>Musculação</td>
+                                            <td>8:30</td>
+                                            <td> <i class="material-icons prefix tooltipped" data-position="bottom"
+                                                    data-tooltip="Enviar SMS">contact_mail</i></td>
+                                            <td><a href="#" class="black-text">Remover aluno</a></td>
+                                        </tr>
+
+                                        <tr data-url="../treino/treino.html">
+                                            <td><img src="../../img/avatar.png" alt="Foto José"></td>
+                                            <td>José</td>
+                                            <td>Musculação</td>
+                                            <td>8:30</td>
+                                            <td> <i class="material-icons prefix tooltipped" data-position="bottom"
+                                                    data-tooltip="Enviar SMS">contact_mail</i></td>
+                                            <td><a href="#" class="black-text">Remover aluno</a></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- Lista dos alunos -->
+            <div class="container">
+                <ul class="collapsible">
+                    <li>
+                        <div class="collapsible-header">
+                            <i class="material-icons">assignment_ind</i> 19/04/2020
+                            <span class="new badge orange" data-badge-caption="aulas">2</span>
+                        </div>
+                        <div class="collapsible-body"><span>
                         <div class="col s12 m12 l12">
                             <table class="highlight centered table responsive-table" id="tabledata">
                                 <thead>
@@ -152,50 +197,57 @@
                             </table>
                         </div>
                     </span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- Adicionar aluno -->
+        <div class="container " id="alunosAtivos">
+            <div class="col s12 m4 l12 center-align">
+                <button>Adicionar aluno</button>
+            </div>
+        </div>
+
+
+
+        <!-- FOOTER -->
+        <footer class="page-footer" id="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5 class="white-text">HIGH PERFORMANCE</h5>
+                        <p class="white-text text-lighten-4">Monitores os seus alunos.</p>
                     </div>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-
-    <!-- FOOTER -->
-    <footer class="page-footer" id="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">HIGH PERFORMANCE</h5>
-                    <p class="white-text text-lighten-4">Monitores os seus alunos.</p>
-                </div>
-                <div class="col l4 offset-l2 s12">
-                    <ul>
-                        <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
-                        <li><a class="white-text text-lighten-3" href="">Crie</a></li>
-                        <li><a class="white-text text-lighten-3" href="../financas/financas.html">Finanças</a></li>
-                        <li><a class="white-text text-lighten-3" href="../../index.html">Sair</a></li>
-                    </ul>
-                </div>
-                <div class="col l1 s4 right">
-                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="../../img/up.png" alt="Voltar ao topo"></a>
+                    <div class="col l4 offset-l2 s12">
+                        <ul>
+                            <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
+                            <li><a class="white-text text-lighten-3" href="">Crie</a></li>
+                            <li><a class="white-text text-lighten-3" href="../financas/financas.html">Finanças</a></li>
+                            <li><a class="white-text text-lighten-3" href="../../index.html">Sair</a></li>
+                        </ul>
+                    </div>
+                    <div class="col l1 s4 right">
+                        <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="../../img/up.png" alt="Voltar ao topo"></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="footer-copyright">
-            <div class="container white-text">
-                © 2020 High Performance Copyright
-                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at
+            <div class="footer-copyright">
+                <div class="container white-text">
+                    © 2020 High Performance Copyright
+                    <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at
                     LogoMakr.com</a>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="../../js/main.js"></script>
-    <script src="../../js/topo.js"></script>
-    <script src="../../js/loader.js"></script>
-    <script src="../../js/crie.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script src="../../js/main.js"></script>
+        <script src="../../js/topo.js"></script>
+        <script src="../../js/loader.js"></script>
+        <script src="../../js/crie.js"></script>
 </body>
 
 </html>
