--- a/pages/financas/financas.html
+++ b/pages/financas/financas.html
@@ -80,82 +80,63 @@
         </div>
     </div>
 
+
     <div class="container" id="lista">
-        <div class="#ffffff white" style="border-bottom: 2px solid black;">
-            <div class="row">
-
-                <div>
-
-                    <div class="col s12 m12 l12 left-align">
-                        <div class="nav-wrapper">
-                            <form>
-                                <div class="input-field">
-                                    <input id="search" type="search" required placeholder="Pesquisar">
-                                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                                    <i class="material-icons">close</i>
-                                </div>
-                            </form>
-                        </div>
-
+        <div class="col s12 m12 l12 left-align">
+            <div class="nav-wrapper">
+                <form>
+                    <div class="input-field">
+                        <input id="search" type="search" required placeholder="Pesquisar">
+                        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                        <i class="material-icons">close</i>
                     </div>
-
-                    <div class="col s2 m3 l3 center-align">
-                        <h5>Foto</h5>
-                    </div>
-
-                    <div class="col s2 m3 l3 center-align">
-                        <h5>Nome</h5>
-                    </div>
-
-                    <div class="col s3 m3 l3 center-align">
-                        <h5>Telefone</h5>
-                    </div>
-
-                    <div class="col s2 m3 l3 center-align">
-                        <h5>Pagamento</h5>
-                    </div>
-                    <div class="col s12 m3 l3 center-align listaAluno">
-                        <p>TODOS ALUNOS</p>
-                    </div>
-
-                </div>
+                </form>
             </div>
+
         </div>
     </div>
 
-    <div class="container " id="alunosAtivos">
-        <div>
-            <div class="row">
-                <div class="col s12 m3 l3 center-align">
-                    <img class="responsive-img " src="../../img/avatar.png" alt="avatar do usuario">
-                </div>
+    <!-- Lista dos alunos -->
+    <div class="container">
+        <div class="col s12 m12 l12">
+            <table class="highlight centered table" id="tabledata">
+                <thead>
+                    <tr>
+                        <th>Imagem</th>
+                        <th>Nome</th>
+                        <th>Telefone</th>
+                        <th>Pagamento</th>
+                    </tr>
+                </thead>
 
-                <div class="col s12 m3 l3 center-align">
-                    <p>José</p>
-                </div>
-
-                <div class="col s12 m3 l3 center-align">
-                    <p>0800545145</p>
-                </div>
-
-                <div class="col s12 m3 l3 center-align">
-                    <form action="#">
-                        <p>
+                <tbody>
+                    <tr>
+                        <td><img src="../../img/avatar.png" alt="Foto José"></td>
+                        <td>José</td>
+                        <td>0800545145</td>
+                        <td>
                             <label>
-                        <input type="checkbox" />
-                        <span class="black-text">Pago</span>
-                      </label>
-                        </p>
-                    </form>
-                </div>
-            </div>
+                                <input type="checkbox" />
+                                <span class="black-text">Pago</span>
+                            </label>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td><img src="../../img/avatar.png" alt="Foto José"></td>
+                        <td>José</td>
+                        <td>0800545145</td>
+                        <td>
+                            <label>
+                                <input type="checkbox" />
+                                <span class="black-text">Pago</span>
+                            </label>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
-
-
-
-
-
 
     <!-- FOOTER -->
     <footer class="page-footer" id="footer">
@@ -181,7 +162,8 @@
         <div class="footer-copyright">
             <div class="container white-text">
                 © 2020 High Performance Copyright
-                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
+                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at
+                    LogoMakr.com</a>
             </div>
         </div>
     </footer>
