--- a/pages/financas/financas.html
+++ b/pages/financas/financas.html
@@ -80,12 +80,11 @@
         </div>
     </div>
 
-
     <div class="container" id="lista">
         <div class="col s12 m12 l12 left-align">
             <div class="nav-wrapper">
                 <form>
-                    <div class="input-field">
+                    <div class="input-field" style="margin-top: 360px">
                         <input id="search" type="search" required placeholder="Pesquisar">
                         <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                         <i class="material-icons">close</i>
@@ -95,6 +94,7 @@
 
         </div>
     </div>
+
 
     <!-- Lista dos alunos -->
     <div class="container">
