--- a/pages/financas/financas.html
+++ b/pages/financas/financas.html
@@ -23,7 +23,7 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="../../index.html" class="brand-logo"><img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
+                <img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;">
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
