--- a/pages/cadastro/cadastro.html
+++ b/pages/cadastro/cadastro.html
@@ -53,8 +53,8 @@
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">call</i>
-                        <input type="tel" name="telefone" id="telefone" pattern="\([0-9]{2}\)[\s][0-9]{4}-[0-9]{4,5}" onkeypress="$(this).mask('(00) 0000-00009')" />
-                        <label for="cel">Celular</label>
+                        <input attrname="telephone1" type="text" id="tel">
+                        <label for="tel">Celular</label>
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">lock_outline</i>
@@ -83,6 +83,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../../js/loader.js"></script>
+
+    <!-- Mascarar telefone -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.1.0/vanilla-masker.min.js"></script>
+    <script src="../../js/maskTel.js"></script>
 </body>
 
 </html>
