--- a/pages/cadastroAluno/cadastrarAlunos.html
+++ b/pages/cadastroAluno/cadastrarAlunos.html
@@ -23,7 +23,7 @@
     <div class="cadastro">
         <div class="row">
             <div class="col s12 m12 l6 center-align" id="cadastroContainer">
-                <a href="../../index.html">
+                <a href="../alunos/alunos.html">
                     <img class="responsive-img logo" src="../../img/icon512.png" alt="High Performance">
                 </a>
                 <h1>Cadastrar novo aluno</h1>
@@ -42,8 +42,8 @@
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">call</i>
-                        <input type="tel" name="telefone" id="telefone" pattern="\([0-9]{2}\)[\s][0-9]{4}-[0-9]{4,5}" onkeypress="$(this).mask('(00) 0000-00009')" />
-                        <label for="cel">Celular</label>
+                        <input attrname="telephone1" type="text" id="tel">
+                        <label for="tel">Celular</label>
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">date_range</i>
@@ -66,6 +66,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../../js/loader.js"></script>
+
+    <!-- Mascarar telefone -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.1.0/vanilla-masker.min.js"></script>
+    <script src="../../js/maskTel.js"></script>
 </body>
 
 </html>
